Add authentification for github
