# back/api/swagger.yaml
@@ -139,13 +139,13 @@ paths:
           description: "Invalid ID supplied"
         404:
           description: "Project not found"
-  
+
   /project/{projectId}/github:
-    put:
+    post:
       tags:
       - "project"
-      summary: "Modify the Github URL of the project"
-      operationId: "updateProjectGithub"
+      summary: "Add a Github reference to the project"
+      operationId: "addProjectGithub"
       produces:
       - "application/json"
       parameters:
@@ -155,6 +155,12 @@ paths:
         required: true
         type: "integer"
         format: "int64"
+      - in: "body"
+        name: "body"
+        description: "Created Github reference"
+        required: true
+        schema:
+          $ref: "#/definitions/APIReference"
       responses:
         400:
           description: "Invalid ID supplied"
@@ -1314,9 +1320,10 @@ definitions:
     type: "object"
     required:
     - "link"
-    - "tokenAPI"
     properties:
       link:
+        type: "string"
+      usernameAPI:
         type: "string"
       tokenAPI:
         type : "string"
