# back/routers/project.router.js
@@ -16,7 +16,7 @@ router.get('/:projectId',projectController.getProjectById);
 router.delete('/:projectId', projectController.deleteProject);
 router.get('', projectController.getAllProjects);
 
-router.put('/:projectId/github', projectController.updateProjectGithub);
+router.post('/:projectId/github', projectController.addProjectGithub);
 
 router.post('/:projectId/agenda', agendaController.addEvent);
 router.get('/:projectId/agenda/:eventId', agendaController.getEvent);
